crates/laplace-macro/tests/ui/fail/laplace_tracked_semaphore_missing_permits.rs
// SPDX-License-Identifier: Apache-2.0

#[laplace_macro::laplace_tracked]
struct Gate {
    #[track]
    limiter: tokio::sync::Semaphore,
}

fn main() {}
