crates/laplace-macro/tests/ui/fail/laplace_tracked_semaphore_missing_permits.stderr
error: Semaphore fields require #[track(permits = N)]
 --> tests/ui/fail/laplace_tracked_semaphore_missing_permits.rs:6:14
  |
6 |     limiter: tokio::sync::Semaphore,
  |              ^^^^^^^^^^^^^^^^^^^^^^
